--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,13 +13,13 @@ baseurl = "/"
 
 # Enter a copyright notice to display in the site footer.
 # To display a copyright symbol, type `&copy;`. For current year, type `{year}`.
-copyright = "&copy; Julian Elve 2001- {year}"
+copyright = "&copy; Julian Elve 2001- {year} "
 
 # Enable analytics by entering your Google Analytics tracking ID
-googleAnalytics = ""
+googleAnalytics = "UA-417495-1"
 
 # Enable comments by entering your Disqus shortname
-disqusShortname = ""
+disqusShortname = "synesthesia-1"
 
 ############################
 ## Advanced options below ##
