--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -67,3 +67,4 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 
 [permalinks]
   post = "/:year/:month/:day/:slug/"
+  note = "/note/:year/:month/:day/:slug/"
