Outline of file structure for WP to Hugo project

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,10 +18,10 @@
   url = "#notes"
   weight = 30
 
-#[[main]]
-#  name = "Projects"
-#  url = "#projects"
-#  weight = 40
+[[main]]
+  name = "Projects"
+  url = "#projects"
+  weight = 40
 
 
 
