Show tag cloud on home

--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -30,7 +30,10 @@
   url = "https://wiki.synesthesia.co.uk/"
   weight = 50
 
-
+[[main]]
+  name = "Tags"
+  url = "#tags"
+  weight = 55
 
 [[main]]
   name = "Contact"
