--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 [submodule "themes/academic"]
 	path = themes/academic
 	url = https://github.com/synesthesia/hugo-academic.git
+[submodule "public"]
+	path = public
+	url = git@github.com:synesthesia/synesthesia.github.io.git
