--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,10 @@
+image:
+  - Visual Studio 2017
+
 install:
   - ps: Start-FileDownload 'https://github.com/gohugoio/hugo/releases/download/v0.55.6/hugo_extended_0.55.6_Windows-64bit.zip'
-  - ps: 7z x hugo_extended_0.55.6_Windows-64bit.zip
+  - ps: mkdir hugo
+  - ps: 7z x hugo_extended_0.55.6_Windows-64bit.zip -y
   - cmd: npm i -D postcss-cli
 
 before_build:
