--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,9 @@
 image:
   - Visual Studio 2017
 
+cache:
+  - node_modules
+
 install:
   - ps: Start-FileDownload 'https://github.com/gohugoio/hugo/releases/download/v0.55.6/hugo_extended_0.55.6_Windows-64bit.zip'
   - ps: mkdir hugo
@@ -11,3 +14,5 @@ before_build:
   # Output useful info for debugging.
   - hugo version
 
+build_script:
+  - hugo --gc --minify -b https://synesthesia.github.io
