--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ install:
 before_build:
   # Output useful info for debugging.
   - hugo version
+  - git clone git@github.com:synesthesia/synesthesia.github.io.git public
 
 build_script:
-  - hugo --gc --minify -b https://synesthesia.github.io
+  - hugo --gc --minify -b https://synesthesia.github.io -t academic
