--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,6 +5,7 @@ cache:
   - node_modules
 
 install:
+  - cmd: git submodule update --recursive
   - ps: Start-FileDownload 'https://github.com/gohugoio/hugo/releases/download/v0.55.6/hugo_extended_0.55.6_Windows-64bit.zip'
   - ps: mkdir hugo
   - ps: 7z x hugo_extended_0.55.6_Windows-64bit.zip -y
