Add webmention pingback urls to head

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -165,3 +165,4 @@ sharing = true
   linkedin = "https://www.linkedin.com/in/julianelve/"
  # twitter = "https://twitter.com/synesthesia"
   gitlab = "https://gitlab.com/synesthesia1"
+  webmentionio = "https://webmention.io/www.synesthesia.co.uk"
