Add comments back on notes

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -199,7 +199,7 @@ plugins_js  = []
   engine = 1
 
   # Which page types are commentable?
-  commentable = {page = true, post = true, docs = true, project = true, publication = true, talk = true}
+  commentable = {page = true, post = true, docs = true, project = true, publication = true, talk = true, note = true}
 
   # Configuration of Disqus.
   [comments.disqus]
