--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "run-p build:**",
     "build:app": "hugo --gc --minify -b $URL",
-    "build-lambda": "netlify-lambda build src/functions"
+    "build:lambda": "netlify-lambda build src/functions"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,10 @@
   },
   "homepage": "https://github.com/synesthesia/site2019#readme",
   "devDependencies": {
-    "npm-run-all": "^4.1.5"
+
   },
   "dependencies": {
+    "npm-run-all": "^4.1.5",
     "netlify-lambda": "^1.6.3"
   }
 }
