More fiddling with build scripts

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   #command = "hugo --gc --minify -b $URL"
-  command = "yarn build"
+  command = "yarn prod"
   publish = "public"
   functions = "functions"
 
