More fiddling with build scripts - combine in one

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "netlify-lambda install",
-    "do-build": "hugo --gc --minify -b $URL; netlify-lambda build src/functions",
+    "postinstall": "netlify-lambda install src/functions",
+    "do-build": "hugo --gc --minify -b $URL && netlify-lambda build src/functions",
     "build:app": "hugo --gc --minify -b $URL",
     "build:lambda": "netlify-lambda build src/functions"
   },
