--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
     "url": "https://github.com/synesthesia/site2019/issues"
   },
   "homepage": "https://github.com/synesthesia/site2019#readme",
-  "devDependencies": {
-
-  },
+  "devDependencies": {},
   "dependencies": {
-    "npm-run-all": "^4.1.5",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "npm-run-all": "^4.1.5"
   }
 }
