--- a/src/functions/package.json
+++ b/src/functions/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "encoding": "^0.1.12",
     "follow-redirects": "^1.9.0",
     "li": "^1.3.0",
     "microformat-node": "^2.0.1",
