--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -164,10 +164,8 @@ sharing = true
 # Link authors to their profile page? (true/false)
 link_authors = true
 
-# Load CSS and JS plugins
-#   E.g. To load `/assets/css/custom.css`, set `plugins_css = ["custom"]`.
+# Load JS plugins
 #   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
-plugins_css = ["custom"]
 plugins_js  = []
 
 # Available address formats.
