--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -215,7 +215,10 @@ plugins_js  = []
     shortname = "synesthesia-1"  # Paste the shortname from your Disqus dashboard.
     show_count = true  # Show comment count in page header? (true/false)
 
-
+# Configuration of Commento.
+  [comments.commento]
+    # If self-hosting Commento, enter its URL here (e.g. "https://commento.?.com"), otherwise leave empty.
+    url = ""
 
 
 ############################
