--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -140,9 +140,13 @@ address_format = "en-gb"
 ############################
 ## Advanced options       ##
 ############################
+[avatar]
+  # Get user avatars from Gravatar.com? (true/false)
+  gravatar = true
 
-# Get user avatars from Gravatar.com? (true/false)
-gravatar = false
+  # Choose a shape for avatar images. Options: circle, square.
+  shape = "circle"
+
 
 # Main menu alignment (l = left, c = center, r = right) and logo options.
 main_menu = {align = "l", show_logo = true}
