--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -26,6 +26,11 @@
 
 
 [[main]]
+  name = "Digital Garden"
+  url = "https://garden.synesthesia.co.uk/"
+  weight = 45
+
+[[main]]
   name = "FedWiki"
   url = "https://wiki.synesthesia.co.uk/"
   weight = 50
