edit regex in wm script

--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -3,9 +3,9 @@
 name: Webmentions
 
 on:
-  #push:
-  #  branches:
-  #    - master
+  push:
+    branches:
+      - master
   schedule:
     - cron: "0 */6 * * *"
 
