--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,5 @@
 
 [submodule "themes/academic"]
 	path = themes/academic
-	url = https://github.com/synesthesia/hugo-academic.git
+	url = https://github.com/synesthesia/wowchemy-hugo-modules.git
+	branch = syn_integration
