--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -24,8 +24,6 @@ disqusShortname = "synesthesia-1"
 ## Advanced options below ##
 ############################
 
-# Name of Academic theme folder in `themes/`.
-theme = "academic"
 
 # Get last modified date for content from Git?
 enableGitInfo = false
@@ -88,3 +86,9 @@ ignoreFiles = ["\\.ipynb$", ".ipynb_checkpoints$", "\\.Rmd$", "\\.Rmarkdown$", "
 [permalinks]
   post = "/:year/:month/:day/:slug/"
   note = "/note/:year/:month/:day/:slug/"
+
+[module]
+  [[module.imports]]
+    path = "github.com/synesthesia/wowchemy-hugo-modules/wowchemy"
+  [[module.imports]]
+    path = "github.com/synesthesia/wowchemy-hugo-modules/netlify-cms-academic"
