--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -286,3 +286,15 @@ plugins_js  = []
 
 [feed]
   mainSections = ["post", "note", "project"]
+
+
+# PLACE THIS NEW [CMS] CONFIG SECTION AT THE END OF THE FILE
+  
+# Content Management System
+[cms]
+ # Enable the admin panel. See https://wowchemy.com/docs/install/
+ netlify_cms = true
+  
+# Icon Pack Extensions
+[icon.pack]
+ ai = true  # Enable the Academicons icon pack https://jpswalsh.github.io/academicons/
