--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -294,5 +294,5 @@ plugins_js  = []
  ai = true  # Enable the Academicons icon pack https://jpswalsh.github.io/academicons/
 
 [security.csp]
-  policy = "default-src 'self' youtube.com *.youtube.com, github.com *.github.com twitter.com *.twitter.com"
+  policy = "default-src 'self' youtube.com *.youtube.com, github.com *.github.com twitter.com *.twitter.com; style-src 'self' cdnjs.cloudflare.com fonts.googleapis.com"
   report_only = false
