--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -294,5 +294,5 @@ plugins_js  = []
  ai = true  # Enable the Academicons icon pack https://jpswalsh.github.io/academicons/
 
 [security.csp]
-  policy = "default-src 'self' youtube.com *.youtube.com, github.com *.github.com twitter.com *.twitter.com; style-src 'self' cdnjs.cloudflare.com fonts.googleapis.com ; script-src self cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com;" 
+  policy =  "default-src 'self'; script-src 'self' 'unsafe-inline' cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; img-src *; media-src *; font-src *"
   report_only = false
