Further CSP edit - add utterance.es as safe script source

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -294,5 +294,5 @@ plugins_js  = []
  ai = true  # Enable the Academicons icon pack https://jpswalsh.github.io/academicons/
 
 [security.csp]
-  policy =  "default-src 'self'; script-src 'self' 'unsafe-inline' *.google-analytics.com cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; img-src *; media-src *; font-src *"
+  policy =  "default-src 'self'; script-src 'self' 'unsafe-inline' utteranc.es *.google-analytics.com cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; img-src *; media-src *; font-src *"
   report_only = false
