--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -305,7 +305,7 @@ plugins_js  = []
  ai = true  # Enable the Academicons icon pack https://jpswalsh.github.io/academicons/
 
 [security.csp]
-  policy =  "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; img-src *; media-src *; font-src *"
+  policy =  "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' cdn.jsdelivr.net utteranc.es *.google-analytics.com cdnjs.cloudflare.com www.googletagmanager.com identity.netlify.com; style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; img-src *; object-src 'self' data:; media-src *; font-src *"
   report_only = false
 
   [security.permissions]
