stop building future

--- a/netlify.toml
+++ b/netlify.toml
@@ -23,4 +23,4 @@
   command = "netlify-lambda build src/functions && hugo --gc --minify --buildFuture -b $URL"
 
 [context.branch-deploy]
-  command = "netlify-lambda build src/functions && hugo --gc --minify --buildFuture  -b $URL"
+  command = "netlify-lambda build src/functions && hugo --gc --minify -b $URL"
