--- a/package.json
+++ b/package.json
@@ -21,10 +21,22 @@
   },
   "homepage": "https://github.com/synesthesia/site2019#readme",
   "devDependencies": {
-
+    "chai": "^4.3.4",
+    "eslint": "^7.30.0",
+    "jsdom": "^16.6.0",
+    "mocha": "^9.0.2"
   },
   "dependencies": {
     "npm-run-all": "^4.1.5",
-    "netlify-lambda": "^1.6.3"
+    "netlify-lambda": "^1.6.3",
+    "accessible-autocomplete": "^2.0.3",
+    "commander": "^8.0.0",
+    "dompurify": "^2.2.9",
+    "got": "^11.8.2",
+    "hotkeys-js": "^3.8.7",
+    "jsdom": "^16.6.0",
+    "lunr": "^2.3.9",
+    "microformats-parser": "^1.4.0",
+    "text-clipper": "^2.1.0"
   }
 }
