--- a/package.json
+++ b/package.json
@@ -23,20 +23,23 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "eslint": "^7.30.0",
+    "feedme": "^2.0.2",
+    "http-link-header": "^1.0.4",
     "jsdom": "^16.6.0",
-    "mocha": "^9.0.2"
+    "mocha": "^9.0.2",
+    "node-fetch": "^3.2.0"
   },
   "dependencies": {
-    "npm-run-all": "^4.1.5",
-    "netlify-lambda": "^1.6.3",
     "accessible-autocomplete": "^2.0.3",
     "commander": "^8.0.0",
     "dompurify": "^2.2.9",
     "got": "^11.8.2",
     "hotkeys-js": "^3.8.7",
-    "jsdom": "^16.6.0",
+    "jsdom": "^19.0.0",
     "lunr": "^2.3.9",
     "microformats-parser": "^1.4.0",
+    "netlify-lambda": "^1.6.3",
+    "npm-run-all": "^4.1.5",
     "text-clipper": "^2.1.0"
   }
 }
