build: add Hugo resources cache netlify plugin

--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,13 @@
   HUGO_VERSION = "0.91.2"
   HUGO_ENABLEGITINFO = "true"
 
+[[plugins]]
+  package = "netlify-plugin-hugo-cache-resources"
+
+	[plugins.inputs]
+	# If it should show more verbose logs (optional, default = true)
+	debug = true
+
 [context.production.environment]
   HUGO_ENV = "production"
 
