--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "http-link-header": "^1.0.4",
     "jsdom": "^16.6.0",
     "mocha": "^9.0.2",
+    "netlify-plugin-hugo-cache-resources": "^0.2.1",
     "node-fetch": "^3.2.0",
     "p-retry": "^5.0.0"
   },
