--- a/.github/workflows/webmentions.yml
+++ b/.github/workflows/webmentions.yml
@@ -47,6 +47,6 @@ jobs:
           git config --global user.name "Julian Elve"
           git config --global user.email "julian@elve.london"
           git remote set-url origin "https://${GITHUB_ACTOR}:${DEPLOY_KEY}@github.com/${GITHUB_REPOSITORY}.git"
-          git checkout main
+          git checkout master
           git add .
-          git diff --quiet && git diff --staged --quiet || (git commit -m "Fetch webmentions"; git push origin main)
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Fetch webmentions"; git push origin master)
