--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "syn2019",
   "version": "1.0.0",
   "description": "My Hugo-based personal website",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -22,10 +21,13 @@
   },
   "homepage": "https://github.com/synesthesia/site2019#readme",
   "devDependencies": {
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "chai": "^4.3.4",
     "eslint": "^7.30.0",
     "feedme": "^2.0.2",
     "http-link-header": "^1.0.4",
+    "husky": "^7.0.4",
     "jsdom": "^16.6.0",
     "mocha": "^9.0.2",
     "netlify-plugin-hugo-cache-resources": "^0.2.1",
