feat(functions): add placeholder micropub function to test auth #31
to get around build issues have switched to local build and deploy the built functions

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 public/
 .idea/
 node_modules/
-functions/
+#functions/
 !src/functions
 !functions/.gitkeep
 resources/_gen
 data/webmentions/processed
 .hugo_build.lock
 
+
+# Local Netlify folder
+.netlify
