--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "netlify-lambda install src/functions",
-    "do-build": "netlify-lambda build src/functions && hugo --gc --minify -b $URL ",
+    "build": "run-p build:*",
     "build:app": "hugo --gc --minify -b $URL",
-    "build:lambda": "netlify-lambda build src/functions"
+    "build:lambda": "netlify-lambda build src/functions",
+    "debug": "netlify dev --inspect"
   },
   "repository": {
     "type": "git",
@@ -23,19 +24,31 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/aws-lambda": "^8.10.92",
+    "@types/node": "^17.0.21",
     "chai": "^4.3.4",
+    "encoding": "^0.1.13",
     "eslint": "^7.30.0",
     "feedme": "^2.0.2",
     "http-link-header": "^1.0.4",
     "husky": "^7.0.4",
     "jsdom": "^16.6.0",
     "mocha": "^9.0.2",
+    "netlify-cli": "^9.8.3",
     "netlify-plugin-hugo-cache-resources": "^0.2.1",
-    "node-fetch": "^3.2.0",
-    "p-retry": "^5.0.0"
+    "p-retry": "^5.0.0",
+    "typescript": "^4.5.5"
   },
   "dependencies": {
+    "@babel/core": "7.10.4",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/plugin-proposal-object-rest-spread": "7.10.4",
+    "@babel/plugin-transform-object-assign": "7.10.4",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@netlify/functions": "^1.0.0",
     "accessible-autocomplete": "^2.0.3",
+    "babel-loader": "8.1.0",
     "commander": "^8.0.0",
     "dompurify": "^2.2.9",
     "got": "^11.8.2",
@@ -44,7 +57,10 @@
     "lunr": "^2.3.9",
     "microformats-parser": "^1.4.0",
     "netlify-lambda": "^1.6.3",
+    "node-fetch": "2.6.7",
     "npm-run-all": "^4.1.5",
-    "text-clipper": "^2.1.0"
+    "text-clipper": "^2.1.0",
+    "webpack": "4.43.0",
+    "webpack-merge": "4.2.2"
   }
 }
