--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "netlify-cli": "^9.8.3",
     "netlify-plugin-hugo-cache-resources": "^0.2.1",
     "p-retry": "^5.0.0",
+    "slugify": "^1.6.5",
     "typescript": "^4.5.5"
   },
   "dependencies": {
