feat: implement stream content section for notes and bookmarks

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -71,6 +71,7 @@ permalinks:
   tags: '/tag/:slug/'
   categories: '/category/:slug/'
   publication_types: '/publication-type/:slug/'
+  stream: '/stream/:slug/'
 module:
   imports:
     - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5
