--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -114,6 +114,13 @@ feed:
     - post
     - note
     - project
+    - event
+  streamSections:
+    - stream
+  streamSubTypes:
+    - note
+    - bookmark
+      
 cms:
   netlify_cms: true
   branch: master
