--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,8 +19,11 @@ main:
   - name: Digital Garden
     url: 'https://garden.synesthesia.co.uk/'
     weight: 45
-  - name: FedWiki
-    url: 'https://wiki.synesthesia.co.uk/'
+  #- name: FedWiki
+  #  url: 'https://wiki.synesthesia.co.uk/'
+  #  weight: 50
+  - name: Commentary
+    url: '/stream'
     weight: 50
   - name: Tags
     url: '#tags'
