Add stream content (#37)
* feat: implement stream content section for notes and bookmarks

* feat: added feed with everything at /feed-all/index.xml

* fix: make test notes draft

* fix: feed-all includce citation in bookmarks

* feat: webmention-sending plugin now references all-content feed

* feat: add stgream to menu

* feat: change presentation of stream view

* refactor: update menu

* feat: hide publications on home page

[skip ci]

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -39,6 +39,7 @@ outputFormats:
   WebAppManifest:
     mediaType: application/manifest+json
     rel: manifest
+  
 blackfriday:
   hrefTargetBlank: true
   angledQuotes: false
@@ -71,6 +72,7 @@ permalinks:
   tags: '/tag/:slug/'
   categories: '/category/:slug/'
   publication_types: '/publication-type/:slug/'
+  stream: '/stream/:slug/'
 module:
   imports:
     - path: github.com/wowchemy/wowchemy-hugo-modules/wowchemy/v5
