--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -13,15 +13,19 @@ main:
   - name: Working in the Open
     url: '#notes'
     weight: 30
+  - name: Commentary
+    url: '/stream'
+    weight: 35
   - name: Projects
     url: '#projects'
     weight: 40
   - name: Digital Garden
     url: 'https://garden.synesthesia.co.uk/'
     weight: 45
-  - name: FedWiki
-    url: 'https://wiki.synesthesia.co.uk/'
-    weight: 50
+  #- name: FedWiki
+  #  url: 'https://wiki.synesthesia.co.uk/'
+  #  weight: 50
+  
   - name: Tags
     url: '#tags'
     weight: 55
