feat(micropub): port other project micropub and run tests

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
     "eslint.alwaysShowStatus": true,
     "eslint.lintTask.enable": true,
     "eslint.packageManager": "yarn",
-    "eslint.useESLintClass": true
+    "eslint.useESLintClass": true,
+    "jest.jestCommandLine": "npm run test --"
 }
