--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,23 @@
       "program": "${workspaceFolder}/node_modules/.bin/netlify",
       "args": ["functions:serve"],
       "console": "integratedTerminal"
+    },
+    {
+      "type": "node",
+      "name": "vscode-jest-tests",
+      "request": "launch",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "disableOptimisticBPs": true,
+      "cwd": "${workspaceFolder}",
+      "runtimeExecutable": "npm",
+      "args": [
+          "run",
+          "test",
+          "--",
+          "--runInBand",
+          "--watchAll=false"
+      ]
     }
   ]
 }
