--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "My Hugo-based personal website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "netlify-lambda install src/functions",
     "build": "run-p build:*",
     "build:app": "hugo --gc --minify -b $URL",
     "build:lambda": "netlify-lambda build src/functions",
     "esbuild": "esbuild src/functions/*.ts --bundle --outdir=functions --platform=node",
     "lint": "eslint src/**/*.ts",
+    "test": "jest",
     "debug": "netlify dev --inspect"
   },
   "repository": {
@@ -27,22 +27,26 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@types/aws-lambda": "^8.10.93",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
+    "babel-jest": "^27.5.1",
     "chai": "^4.3.4",
     "encoding": "^0.1.13",
     "eslint": "^8.11.0",
+    "eslint-plugin-jest": "^26.1.1",
     "feedme": "^2.0.2",
     "http-link-header": "^1.0.4",
     "husky": "^7.0.4",
+    "jest": "^27.5.1",
     "jsdom": "^16.6.0",
-    "mocha": "^9.2.2",
-    "netlify-cli": "^9.13.2",
+    "netlify-cli": "^9.8.3",
     "netlify-plugin-hugo-cache-resources": "^0.2.1",
+    "nock": "^13.2.4",
     "p-retry": "^5.0.0",
     "slugify": "^1.6.5",
-    "typescript": "^4.6.2"
+    "ts-jest": "^27.1.3"
   },
   "dependencies": {
     "@babel/core": "7.17.7",
@@ -51,12 +55,20 @@
     "@babel/plugin-transform-object-assign": "7.16.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@middy/core": "^2.5.1",
+    "@middy/http-error-handler": "^2.5.1",
+    "@middy/http-json-body-parser": "^2.5.1",
+    "@middy/http-multipart-body-parser": "^2.5.1",
+    "@middy/http-urlencode-body-parser": "^2.5.1",
     "@netlify/functions": "^1.0.0",
     "accessible-autocomplete": "^2.0.3",
+    "article-title": "^4.1.0",
     "babel-loader": "8.2.3",
     "commander": "^8.0.0",
     "dompurify": "^2.3.6",
+    "dotenv": "^16.0.0",
     "got": "^11.8.2",
+    "gray-matter": "^4.0.3",
     "hotkeys-js": "^3.8.7",
     "jsdom": "^16.6.0",
     "lunr": "^2.3.9",
