chore: update variable names and docs

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-GIT_TOKEN="123456abcdefg"
+GITHUB_TOKEN="123456abcdefg"
 AUTHOR_EMAIL="email@domain.tld"
 AUTHOR_NAME="author"
 GITHUB_USER="GITHUB_username"
