--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 GITHUB_TOKEN="123456abcdefg"
+MICROPUB_KEY = "sada09WEQ4R==223"
 AUTHOR_EMAIL="email@domain.tld"
 AUTHOR_NAME="author"
 GITHUB_USER="GITHUB_username"
