--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
     "root": true,
     "parser": "@typescript-eslint/parser",
     "plugins": [
-      "@typescript-eslint"
+      "@typescript-eslint",
+      "jest"
     ],
     "extends": [
       "eslint:recommended",
@@ -10,6 +11,8 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "env": {
+      "node": true,
       "jest/globals": true
+
     }
 }
