fix: enforce snake_case on content type vars

--- a/config/_default/params.yml
+++ b/config/_default/params.yml
@@ -117,11 +117,11 @@ feed:
     - event
   streamSections:
     - stream
-  streamSubTypes:
+  stream_sub_types:
     - note
     - bookmark
     - reply
-      
+
 cms:
   netlify_cms: true
   branch: master
