--- a/netlify.toml
+++ b/netlify.toml
@@ -46,8 +46,18 @@
 
 [[redirects]]
 https://elve.london/* https://www.synesthesia.co.uk/:splat 200
+
+[[redirects]]
 https://www.elve.london/* https://www.synesthesia.co.uk/:splat 200
+
+[[redirects]]
 https://elve.co.uk/* https://www.synesthesia.co.uk/:splat 200
+
+[[redirects]]
 https://www.elve.co.uk/* https://www.synesthesia.co.uk/:splat 200
+
+[[redirects]]
 https://elve.org.uk/* https://www.synesthesia.co.uk/:splat 200
+
+[[redirects]]
 https://www.elve.org.uk/* https://www.synesthesia.co.uk/:splat 200
