--- a/netlify.toml
+++ b/netlify.toml
@@ -45,31 +45,31 @@
   command = "make build-preview-content"
 
 [[redirects]]
-from   = https://elve.london/*
-to     = https://www.synesthesia.co.uk/:splat
+from   = "https://elve.london/*"
+to     = "https://www.synesthesia.co.uk/:splat"
 status = 200
 
 [[redirects]]
-from   = https://www.elve.london/*
-to     = https://www.synesthesia.co.uk/:splat
+from   = "https://www.elve.london/*"
+to     = "https://www.synesthesia.co.uk/:splat"
 status = 200
 
 [[redirects]]
-from   = https://elve.co.uk/*
-to     = https://www.synesthesia.co.uk/:splat
+from   = "https://elve.co.uk/*"
+to     = "https://www.synesthesia.co.uk/:splat"
 status = 200
 
 [[redirects]]
-from   = https://www.elve.co.uk/*
-to     = https://www.synesthesia.co.uk/:splat
+from   = "https://www.elve.co.uk/*"
+to     = "https://www.synesthesia.co.uk/:splat"
 status = 200
 
 [[redirects]]
-from   = https://elve.org.uk/*
-to     = https://www.synesthesia.co.uk/:splat
+from   = "https://elve.org.uk/*"
+to     = "https://www.synesthesia.co.uk/:splat"
 status = 200
 
 [[redirects]]
-from   = https://www.elve.org.uk/*
-to     = https://www.synesthesia.co.uk/:splat
+from   = "https://www.elve.org.uk/*"
+to     = "https://www.synesthesia.co.uk/:splat"
 status = 200
