fix: limit summary rss 200

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -39,6 +39,9 @@ outputFormats:
   WebAppManifest:
     mediaType: application/manifest+json
     rel: manifest
+    
+rss
+  limitSummary: 200 
   
 blackfriday:
   hrefTargetBlank: true
