fix: yaml typo 2

--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -40,8 +40,9 @@ outputFormats:
     mediaType: application/manifest+json
     rel: manifest
     
-rss:
-  limitSummary: 200 
+services:
+  rss:
+    limitSummary: 200 
   
 blackfriday:
   hrefTargetBlank: true
